kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  ports:
    - port: 80
  selector:
    app: ${APPLICATION_NAME}
  type: ClusterIP # Cluster IP since no need to map to an external port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ${K8S_INGRESS_HOST}
      secretName: ${APPLICATION_NAME}
  rules:
    - host: ${K8S_INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 80
